--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,11 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* カラー変数 */
+  --text-color: #000;
+  --bg-secondary: #f8f9fa;
+  --border-color: #e0e0e0;
 }
 
 * {
